contact page is don

--- a/views/tmpl/admin/contact.html
+++ b/views/tmpl/admin/contact.html
@@ -31,97 +31,83 @@
 					
 					<div class="hometabs">
 						<div class="tile-body table-custom">
-							<section id="contactus">
-          <div class="container">
-            <div class="contactwrap p40">
-              <div class="contactheading">
-                <h1>Let Us Know What You Think</h1>
-                <p>Please feel free to contact us with any questions that you may have at 949-208-3600. If you prefer an email back from us, fill out the contact form below and we will get back to you as soon as possible. Thank you. </p>
-              </div>
-              <div class="addresswrap">
-                <div class="row">
-                  <div class="col-sm-4">
-                    <div class="addbox">
-                      <div class="conticon"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
-                      <p>601 Wald, Irvine CA 92618</p>
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="addbox">
-                      <div class="conticon"><i class="fa fa-phone" aria-hidden="true"></i></div>
-                      <p>949-208- 3600</p>
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="addbox">
-                      <div class="conticon"><i class="fa fa-globe" aria-hidden="true"></i></div>
-                      <p>info@elikaaccess.com</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </section>
-        <section id="googlemapwrap">
-          <div id="map"></div>
-        </section>
-
-        <footer id="footer">
-          <div class="footerwrap">
-            <div class="footerformwrap">
-              <h2>Contact Us</h2>
-              <div class="formwrap">
-                <h3>Send Message</h3>
-                  <span class="input input--hoshi">
-                    <input class="input__field input__field--hoshi" type="text" id="input-4" />
-                    <label class="input__label input__label--hoshi input__label--hoshi-color-1" for="input-4">
-                      <span class="input__label-content input__label-content--hoshi">Name</span>
-                    </label>
-                  </span>
-                  <span class="input input--hoshi">
-                    <input class="input__field input__field--hoshi" type="text" id="input-5" />
-                    <label class="input__label input__label--hoshi input__label--hoshi-color-2" for="input-5">
-                      <span class="input__label-content input__label-content--hoshi">Email</span>
-                    </label>
-                  </span>
-                  <span class="input input--hoshi">
-                    <input class="input__field input__field--hoshi" type="text" id="input-6" />
-                    <label class="input__label input__label--hoshi input__label--hoshi-color-3" for="input-6">
-                      <span class="input__label-content input__label-content--hoshi">Message</span>
-                    </label>
-                  </span>
-                  <button type="submit" class="btn btn-default">Submit</button>
-              </div>  
-            </div>
-            <div class="footerdetails">
-              <div class="contactdetail">
-                <div class="contacttxt">
-                  <span class="contact-icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
-                  <span class="conttxt">
-                    <p>601 Wald, Irvine CA 92618</p>
-                    <p>Fax: (949) 753-1640</p>
-                  </span>
-                </div>
-                <div class="contacttxt">
-                  <span class="contact-icon"><i class="fa fa-mobile" aria-hidden="true"></i></span>
-                  <span class="conttxt">
-                    <p>949-208- 3600</p>
-                    <p>Monday - Friday</p>
-                    <p>6 AM - 5 PM</p>
-                  </span>
-                </div>
-                <div class="contacttxt">
-                  <span class="contact-icon"><i class="fa fa-envelope" aria-hidden="true"></i></span>
-                  <span class="conttxt">
-                    <p>Contact Help Center</p>
-                    <p>info@elikaaccess.com</p>
-                  </span>
-                </div>
-              </div>
-            </div>
-          </div> 
-        </footer>
+							<div class="contactwrap">
+								<div class="contactheading">
+									<h1>Let Us Know What You Think</h1>
+									<p>Please feel free to contact us with any questions that you may have at 949-208-3600. If you prefer an email back from us, fill out the contact form below and we will get back to you as soon as possible.<br/>Thank you. </p>
+								</div>
+								<div class="addresswrap">
+									<div class="row">
+										<div class="col-md-3 mb-80">
+											<div class="addbox">
+												<div class="conticon"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
+												<div class="boxinfo">
+													<p>601 Wald, Irvine CA 92618</p>
+												</div>
+											</div>
+										</div>
+										<div class="col-md-3 mb-80">
+											<div class="addbox">
+												<div class="conticon"><i class="fa fa-phone" aria-hidden="true"></i></div>
+												<div class="boxinfo">
+													<p>949-208-3600</p>
+													<p>Mon - Fri: 6AM - 5PM</p>
+												</div>
+											</div>
+										</div>
+										<div class="col-md-3 mb-80">
+											<div class="addbox">
+												<div class="conticon"><i class="fa fa-fax" aria-hidden="true"></i></div>
+												<div class="boxinfo">
+													<p>(949) 753-1640</p>
+												</div>
+											</div>
+										</div>
+										<div class="col-md-3 mb-80">
+											<div class="addbox">
+												<div class="conticon"><i class="fa fa-envelope" aria-hidden="true"></i></div>
+												<div class="boxinfo">
+													<p>info@elikaaccess.com</p>
+													<p>support@elikaaccess.com</p>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="contactnow overflow">									
+									<div class="col-md-8 col-lg-9 pl-0 pr-30">
+										<iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3321.940682981989!2d-117.73522388430187!3d33.63277998072208!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dce87698e20b67%3A0x1b391d62f2aa1a3f!2s601+Wald%2C+Irvine%2C+CA+92618%2C+USA!5e0!3m2!1sen!2sin!4v1498649052722"  frameborder="0" allowfullscreen></iframe>
+									</div>
+									<div class="col-md-4 col-lg-3 contactus">
+										<h2>Request a Quote</h2>
+										<form ng-validate="" id="" name="" enctype="">
+											<div class="modal-body p-0">
+												<div class="row">
+													<div class="form-group col-md-12">
+														<label for="">Name <span class="text-danger">*</span></label>
+														<input type="text" maxlength="30" name="Name" class="form-control" required>
+													</div>
+													<div class="form-group col-md-12">
+														<label for="">Email <span class="text-danger">*</span></label>
+														<input type="email" maxlength="30" name="Name" class="form-control" required>
+													</div>
+													<div class="form-group col-md-12">
+														<label for="">Subject <span class="text-danger">*</span></label>
+														<input type="text" maxlength="30" name="Name" class="form-control" required>
+													</div>
+													<div class="form-group col-md-12">
+														<label for="">Message <span class="text-danger">*</span></label>
+														<textarea class="form-control"></textarea> 
+													</div>
+												</div>	
+												<div class="ta-c mt-10">
+													<button class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a" ng-click="">Submit</button>
+												</div>
+											</div>
+										</form>
+									</div>									
+								</div>
+							</div>
 						</div>
 					</div>
 				</section>
