--- a/views/tmpl/admin/device/dependent-devices.html
+++ b/views/tmpl/admin/device/dependent-devices.html
@@ -122,7 +122,7 @@
 								<div class="col-sm-6 col-md-6">
 									<div class="row">
 										<div class="col-sm-8 col-md-9 search">
-											<input type="text" class="form-control ng-pristine ng-valid ng-touched" ng-model="searchText" placeholder="Search by text...." aria-invalid="false" style="">
+											<input type="text" class="form-control ng-pristine ng-valid ng-touched" ng-model="searchText" maxlength="50" placeholder="Search by text...." aria-invalid="false" style="">
 											<button class="btn btn-default" type="button" ng-click="searchFunction()">Search</button>
 										</div>
 										<div class="col-sm-4 col-md-3 profilephoto csvupload">
