--- a/views/tmpl/admin/door/doors.html
+++ b/views/tmpl/admin/door/doors.html
@@ -92,7 +92,7 @@
 								<div class="col-sm-6 col-md-6">
 									<div class="row">
 										<div class="col-sm-8 col-md-9 search">
-											<input type="text" class="form-control" placeholder="Search by text...." ng-model="searchText" placeholder="Search by text...."
+											<input type="text" class="form-control" maxlength="50" placeholder="Search by text...." ng-model="searchText" placeholder="Search by text...."
 											 ng-keyup="searchFunction($event)">
 											<button class="btn btn-default br-2-r" type="button" ng-click="searchFunction()">Search</button>
 										</div>
