--- a/views/tmpl/admin/facility/facility.html
+++ b/views/tmpl/admin/facility/facility.html
@@ -95,7 +95,7 @@
 								<div class="col-sm-6 col-md-6">
 									<div class="row">
 										<div class="col-sm-8 col-md-9 search">
-											<input type="text" class="form-control" ng-model="search" ng-keyup="search_facility($event)" placeholder="Search by text....">
+											<input type="text" class="form-control" ng-model="search" ng-keyup="search_facility($event)" maxlength="50" placeholder="Search by text....">
 											<button class="btn btn-default br-2-r" ng-click="search_facility()" type="button">Search</button>
 										</div>
 										<!-- <div class="col-sm-4 col-md-3 profilephoto csvupload">
