--- a/views/tmpl/admin/schedule/schedule-groups.html
+++ b/views/tmpl/admin/schedule/schedule-groups.html
@@ -52,7 +52,7 @@
 								<div class="col-sm-6 col-md-6">
 									<div class="row">
 										<div class="col-sm-8 col-md-9 search">
-											<input type="text" class="form-control" placeholder="Search by text...." ng-model="searchText" ng-keypress="searchFunction($event)">
+											<input type="text" class="form-control" maxlength="50" placeholder="Search by text...." ng-model="searchText" ng-keypress="searchFunction($event)">
 											<button class="btn btn-default br-2-r" ng-click="searchFunction()" type="button">Search</button>
 										</div>
 										<!-- <div class="col-sm-4 col-md-3 profilephoto csvupload">
