--- a/views/tmpl/admin/user/user-groups.html
+++ b/views/tmpl/admin/user/user-groups.html
@@ -129,7 +129,7 @@
 								<div class="col-sm-6 col-md-6">
 									<div class="row">
 										<div class="col-sm-8 col-md-9 search">
-											<input type="text" class="form-control" placeholder="Search by text...." ng-keyup="searchFunction($event)" ng-model="searchText">
+											<input type="text" class="form-control" maxlength="50" placeholder="Search by text...." ng-keyup="searchFunction($event)" ng-model="searchText">
 											<button class="btn btn-default br-2-r" type="button" ng-click="searchFunction()">Search</button>
 										</div>										
 										<!-- <div class="col-sm-4 col-md-3 profilephoto csvupload">
