--- a/views/tmpl/subadmin/user/users.html
+++ b/views/tmpl/subadmin/user/users.html
@@ -421,7 +421,7 @@
 									</label>
 								</div>
 								<div class="col-md-4 search">
-									<input type="text" class="form-control" placeholder="Search by text....">
+									<input type="text" class="form-control" maxlength="50" placeholder="Search by text....">
 									<button class="btn btn-default" type="button">Search</button>
 								</div>
 								<div class="col-md-4">
