--- a/elika-warehouse/views/tmpl/firmware/firmware-management.html
+++ b/elika-warehouse/views/tmpl/firmware/firmware-management.html
@@ -145,7 +145,7 @@
 								<div class="col-sm-8 col-md-6">
 									<div class="row">
 										<div class="col-sm-7 col-md-9 search">
-											<input type="text" class="form-control" ng-model="searchText" placeholder="Search by text...." ng-keyup="firmwareInit($event)">
+											<input type="text" class="form-control" ng-model="searchText" maxlength="50" placeholder="Search by text...." ng-keyup="firmwareInit($event)">
 											<button class="btn btn-default br-2-r" type="button" ng-click="firmwareInit()">Search</button>
 										</div>
 										<div class="col-sm-5 col-md-3 profilephoto csvupload">
