--- a/views/tmpl/admin/device/device-details.html
+++ b/views/tmpl/admin/device/device-details.html
@@ -159,7 +159,7 @@
 											<div class="col-md-6">
 												<div class="row">
 													<div class="col-md-8 search">
-														<input type="text" class="form-control" placeholder="Search by text...." ng-model="searchText" ng-keyup="searchFunction($event)">
+														<input type="text" class="form-control" maxlength="50" placeholder="Search by text...." ng-model="searchText" ng-keyup="searchFunction($event)">
 														<button class="btn btn-default br-2-r" type="button" ng-click="searchFunction()">Search</button>
 													</div>
 													<div class="col-md-4 ta-r">
@@ -319,7 +319,7 @@
 											<div class="col-md-6">
 												<div class="row">
 													<div class="col-md-8 search">
-														<input type="text" class="form-control" placeholder="Search by text...." >
+														<input type="text" class="form-control" maxlength="50" placeholder="Search by text...." >
 														<button class="btn btn-default br-2-r" type="button">Search</button>
 													</div>
 													<div class="col-md-4 ta-r">
