--- a/views/tmpl/admin/facility/facility-details.html
+++ b/views/tmpl/admin/facility/facility-details.html
@@ -111,7 +111,7 @@
 											<div class="col-md-6">
 												<div class="row">
 													<div class="col-md-8 search">
-														<input type="text" class="form-control" placeholder="Search by text....">
+														<input type="text" class="form-control" maxlength="50" placeholder="Search by text....">
 														<button class="btn btn-default br-2-r" type="button">Search</button>
 													</div>
 													<div class="col-md-4 ta-r">
@@ -272,7 +272,7 @@
 											<div class="col-md-6">
 												<div class="row">
 													<div class="col-md-8 search">
-														<input type="text" class="form-control" placeholder="Search by text....">
+														<input type="text" class="form-control" maxlength="50" placeholder="Search by text....">
 														<button class="btn btn-default br-2-r" type="button">Search</button>
 													</div>
 													<div class="col-md-4 ta-r">
