--- a/views/tmpl/admin/permissions/admin.html
+++ b/views/tmpl/admin/permissions/admin.html
@@ -186,7 +186,7 @@
 								<div class="col-md-6">
 									<div class="row">
 										<div class="col-md-9 search">
-											<input type="text" class="form-control" placeholder="Search by text....">
+											<input type="text" class="form-control" maxlength="50" placeholder="Search by text....">
 											<button class="btn btn-default br-2-r" type="button">Search</button>
 										</div>
 										<div class="col-md-3 profilephoto csvupload">
