--- a/views/tmpl/admin/schedule/holiday-schedules.html
+++ b/views/tmpl/admin/schedule/holiday-schedules.html
@@ -137,7 +137,7 @@
 								<div class="col-sm-6 col-md-6">
 									<div class="row">
 										<div class="col-sm-8 col-md-9 search">
-											<input type="text" class="form-control" ng-model="searchText" placeholder="Search by text....">
+											<input type="text" class="form-control" ng-model="searchText" maxlength="50" placeholder="Search by text....">
 											<button class="btn btn-default br-2-r" type="button">Search</button>
 										</div>
 										<!-- <div class="col-sm-4 col-md-3 profilephoto csvupload">
