--- a/views/tmpl/admin/user/user-groups-members.html
+++ b/views/tmpl/admin/user/user-groups-members.html
@@ -65,7 +65,7 @@
 									</label> -->
 								</div>
 								<div class="col-sm-4 col-md-4 search">
-									<input type="text" class="form-control" placeholder="Search by text....">
+									<input type="text" class="form-control" maxlength="50" placeholder="Search by text....">
 									<button class="btn btn-default br-2-r" type="button">Search</button>
 								</div>
 								<div class="col-sm-4 col-md-4">
