--- a/views/tmpl/subadmin/facility/facility-details.html
+++ b/views/tmpl/subadmin/facility/facility-details.html
@@ -168,7 +168,7 @@
 											<div class="col-md-6">
 												<div class="row">
 													<div class="col-md-8 search">
-														<input type="text" class="form-control" placeholder="Search by text...." ng-model="facility.search_val" ng-keypress="search_facility_device(facility)">
+														<input type="text" class="form-control" maxlength="50" placeholder="Search by text...." ng-model="facility.search_val" ng-keypress="search_facility_device(facility)">
 														<button class="btn btn-default br-2-r" type="button" ng-click="search_facility_device(facility)">Search</button>
 													</div>
 													<div class="col-md-4 ta-r">
@@ -330,7 +330,7 @@
 											<div class="col-md-6">
 												<div class="row">
 													<div class="col-md-8 search">
-														<input type="text" class="form-control" placeholder="Search by text....">
+														<input type="text" class="form-control" maxlength="50" placeholder="Search by text....">
 														<button class="btn btn-default br-2-r" type="button">Search</button>
 													</div>
 													<div class="col-md-4 ta-r">
