--- a/views/header.html
+++ b/views/header.html
@@ -20,11 +20,11 @@
 		<ul class="nav-right list-inline headmenu">
 			<li><a ui-sref="app.admin.dashboard"><span>Home</span></a></li>
 			<li class="dropdown" uib-dropdown>
-				<span class="dropdown-toggle" ui-sref="app.admin.facility.facility" uib-dropdown-toggle>Facilities &nbsp;<!-- <fa name="angle-down"></fa> --></span>
-				<!-- <ul class="dropdown-menu panel panel-default animated littleFadeInDown" role="menu">
-					<li><a ui-sref="app.admin.facility.facility">All Facilities</a></li>
-					<li ng-repeat="facility in facilities"><a ui-sref="app.admin.facility.view-facility({facility_id:facility.facility_id})">{{ facility.facility_name }}</a></li>
-				</ul> -->
+				<span class="dropdown-toggle" uib-dropdown-toggle>Facilities &nbsp; <fa name="angle-down"></fa> </span>
+				<ul class="dropdown-menu panel panel-default animated littleFadeInDown" role="menu">
+					<li><a ui-sref="app.admin.dashboard">All Facilities</a></li>
+					<li ng-repeat="facility in headerFacilityList"><a ui-sref="app.admin.dashboardfacility({facility_id:facility.facility_id})">{{ facility.facility_name }}</a></li>
+				</ul>
 			</li>
 			<li class="dropdown" uib-dropdown>
 				<span class="dropdown-toggle" uib-dropdown-toggle>Devices &nbsp;<fa name="angle-down"></fa></span>
@@ -46,7 +46,7 @@
 				<span class="dropdown-toggle" uib-dropdown-toggle>Doors &nbsp;<fa name="angle-down"></fa></span>
 				<ul class="dropdown-menu panel panel-default animated littleFadeInDown" role="menu">
 					<li><a ui-sref="app.admin.door.doors">Doors</a></li>
-					<!-- <li><a ui-sref="app.admin.door.door-groups">Door Groups</a></li> -->
+					<li><a ui-sref="app.admin.door.door-groups">Door Groups</a></li>
 				</ul>
 			</li>
 			<li class="dropdown" uib-dropdown>
