event id in activity page

--- a/views/tmpl/admin/activity.html
+++ b/views/tmpl/admin/activity.html
@@ -119,7 +119,7 @@
 											<td>{{active['door/device']}}</td>
 											
 											<td class="customicon ta-c">
-												<a href="" ng-click="viewActivity(active['device_id'],active.media_file)" uib-tooltip="View"><i class="fa fa-eye" aria-hidden="true"></i></a>
+												<a href="" ng-click="viewActivity(active['device_id'],active.media_file,active.event_id)" uib-tooltip="View"><i class="fa fa-eye" aria-hidden="true"></i></a>
 											</td>
 										</tr>
 									</tbody>
