--- a/views/tmpl/thank-you.html
+++ b/views/tmpl/thank-you.html
@@ -25,7 +25,7 @@
 														<p align="center" style="margin-top: 0;"><img src="images/elika-logo.jpg" alt="https://www.elikaaccess.com/" border="0" style="margin:0;padding:0;max-width:600px;border:none;font-size:14px;font-weight:bold;min-height:auto;line-height:100%;outline:none;text-decoration:none;text-transform:capitalize" class="CToWUd"></p>
 
 														<div class="m_1194638937737037471text">
-															<p style="margin-top:0px;margin-bottom:20px"></p><p>Hi <strong>John Rockwell</strong>,</p>
+															<p style="margin-top:0px;margin-bottom:20px"></p><p>
 
 															<p style="line-height: 30px;">Thank you for choosing to <strong>Elika Access Systems.</strong><br/> Your <span class="il">email</span> address has been successfully verified.<br/><br/></p>
 
