--- a/views/tmpl/admin/schedule/schedule-groups.html
+++ b/views/tmpl/admin/schedule/schedule-groups.html
@@ -128,7 +128,7 @@
 											</md-card-content>
 											<div class="md-actions" layout="row" layout-align="center center">
 												<a class="btn btn-orange btn-border btn-rounded" ui-sref="app.admin.schedule.view-schedule({schedule_id:schedule.schedule_id})">View</a>
-												<a class="btn btn-success btn-border btn-rounded" ui-sref="app.admin.schedule.edit-schedule-groups({schedule_id:schedule.schedule_id})">Edit</a>
+												<a class="btn btn-success btn-border btn-rounded" ui-sref="app.admin.schedule.edit-schedule-groups({schedule_id:schedule.schedule_id, schedule_type:schedule.schedule_category})">Edit</a>
 												<a class="btn btn-danger btn-border btn-rounded" ng-click="showConfirm($event,schedule.schedule_id)">Delete</a>
 											</div>
 										</md-card>										
