Added skip and code size

--- a/styles/custom.css
+++ b/styles/custom.css
@@ -3906,3 +3906,6 @@ span.edittxt {position: absolute;
     pointer-events: none;
     opacity: 0.5;
 }
+.dhtmlx-alert{
+        z-index: 1050 !important;
+}
